Update logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body>
   <div class="email-container">
     <div class="header">
-      <!-- ضع رابط الشعار الصحيح هنا -->
+      1761467637309-removebg-preview.png
       <img src="https://yourdomain.com/logo.png" alt="شعار الشركة">
       <h2>شركة الكيان</h2>
     </div>
