Update logo image source in index.html

--- a/index.html
+++ b/index.html
@@ -54,8 +54,7 @@
 <body>
   <div class="email-container">
     <div class="header">
-      1761467637309-removebg-preview.png
-      <img src="https://yourdomain.com/logo.png" alt="شعار الشركة">
+      <img src="1761467637309-removebg-preview.png" alt="شعار الشركة">
       <h2>شركة الكيان</h2>
     </div>
     <div class="content">
